@@ -1,6 +1,7 @@
 <% @title = "client-side-validations test" %>
 
-<%# test %>
+<%= test_base %>
+<%= test_validators %>
 
 <h1 id="qunit-header"><%= @title %></h1>
 <div id="jquery-version">
